finished desktop size query

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming Soon)</a>
   </header>
+  <main>
+    <div class="cellphone">
+
+      <video width="auto" height="auto">
+        <source src="resources/images/excursion.mp4" type="video/mp4">
+    </div>
+
+
+  </main>
 </body>
 
 </html>
