finished html and css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming Soon)</a>
+    <a href="#" class="download-excursion">Download Excursion (Coming Soon)</a>
   </header>
   <main>
     <div class="cellphone">
@@ -20,6 +20,24 @@
       <video width="auto" height="auto">
         <source src="resources/images/excursion.mp4" type="video/mp4">
     </div>
+
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers pieces you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.jpg" alt="camping">
+    <div class="cellphone-icon">
+      <img src="resources/images/phone.png" alt="camping">
+    </div>
+    <h1 class="footer-callout">Coming Soon for iPhone and Android</h1>
+
+    <a href="#" class="download-excursion">Download Excursion (Coming soon!)</a>
+
+    <div>
+      <p class="copyright">
+        © Excursion
+      </p>
+    </div>
+
+
 
 
   </main>
